--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 appnope==0.1.3
 asttokens==2.0.5
+autopep8==1.6.0
 backcall==0.2.0
 bcrypt==3.2.2
 blinker==1.4
@@ -35,14 +36,17 @@ prompt-toolkit==3.0.29
 psycopg2-binary==2.9.3
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycodestyle==2.8.0
 pycparser==2.21
 Pygments==2.12.0
+PyJWT==2.3.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 s3transfer==0.5.2
 six==1.16.0
 SQLAlchemy==1.4.36
 stack-data==0.2.0
+toml==0.10.2
 traitlets==5.2.0
 urllib3==1.26.9
 wcwidth==0.2.5
