--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,12 @@ email-validator==1.2.1
 executing==0.8.3
 Flask==2.1.2
 Flask-Bcrypt==1.0.1
+Flask-Cors==3.0.10
 Flask-DebugToolbar==0.13.1
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 greenlet==1.1.2
+gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.11.3
 ipython==8.3.0
